--- a/index.html
+++ b/index.html
@@ -14,23 +14,68 @@
 </head>
 <body>
     <div class="container">
-        <div class="design-wrapper">
-            <h1 class="design-wrapper__primary-text">Современные и стильные интерьеры для комфортной жизни</h1>
-            <div class="design-wrapper__image-wrapper">
-                <p class="design-wrapper__image-wrapper_second-text">
-                    Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов
-                </p>
-            </div>
+      <section class="hero">
+        <h1 class="hero__title">
+          Современные и стильные интерьеры для комфортной жизни
+        </h1>
+        <div class="hero__description">
+          <p class="hero__text">
+            Мы — команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов
+          </p>
         </div>
-        <div class="studio-description-wrapper">
-            <h2 class="studio-description-wrapper__about-us">
-                О НАС
-            </h2>
-            <h2 class="studio-description-wrapper__title">
-                Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
-            </h2>
-            <a href="#" class="studio-description-wrapper__view-services">Посмотреть услуги</a>
-        </div>
+      </section>
+  
+      <section class="about">
+        <h2 class="about__title">О НАС</h2>
+        <p class="about__text">
+          Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
+        </p>
+        <a href="#" class="about__link">Посмотреть услуги</a>
+      </section>
+  
+      <section class="projects">
+        <h2 class="projects__title">ПРОЕКТЫ</h2>
+        <ul class="projects__list">
+          <li class="projects__item">
+            <img src="resources/jk-pravobereznij.png" alt="Картинка ЖК Правобережный" class="projects__image" />
+            <p class="projects__name">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
+            <a href="#" class="projects__link">Подробнее →</a>
+          </li>
+          <li class="projects__item">
+            <img src="resources/jk-norverzchskij.png" alt="Картинка ЖК Норвежский" class="projects__image" />
+            <p class="projects__name">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
+            <a href="#" class="projects__link">Подробнее →</a>
+          </li>
+          <li class="projects__item">
+            <img src="resources/jk-sosnovskij.png" alt="Картинка ЖК Сосновский" class="projects__image" />
+            <p class="projects__name">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
+            <a href="#" class="projects__link">Подробнее →</a>
+          </li>
+        </ul>
+        <button class="projects__button">Смотреть все проекты</button>
+      </section>
+      <section class="services">
+        <h2 class="services__title">УСЛУГИ</h2>
+        <ul class="services__list">
+          <li class="services__item">
+            <img src="resources/planning-solution.png" alt="Картинка планировочное решение" class="services__image" />
+            <h3 class="services__name">Планировочное решение — от 2500₽/м²</h3>
+          </li>
+          <li class="services__item">
+            <img src="resources/design-project.png" alt="Картинка дизайн-проект" class="services__image" />
+            <h3 class="services__name">Дизайн-проект — от 3000₽/м²</h3>
+          </li>
+          <li class="services__item">
+            <img src="resources/authors-supervision.png" alt="Картинка авторский надзор" class="services__image" />
+            <h3 class="services__name">Авторский надзор — от 30 000₽ в месяц</h3>
+          </li>
+          <li class="services__item">
+            <img src="resources/equipment.png" alt="Картинка комплектация" class="services__image" />
+            <h3 class="services__name">Комплектация — 5% от стоимости спецификации</h3>
+          </li>
+        </ul>
+      </section>
     </div>
-</body>
+  </body>
+  
 </html>
