--- a/index.html
+++ b/index.html
@@ -14,68 +14,136 @@
 </head>
 <body>
     <div class="container">
+      <nav class="header">
+        <a href="#" class="logo-link">
+          <img 
+            src="resources/metrica-logo.png" 
+            alt="Лого Метрика" 
+            class="logo"
+          />
+        </a>
+        <a href="#about" class="header__link title">О НАС</a>
+        <a href="#projects" class="header__link title">ПРОЕКТЫ</a>
+        <a href="#services" class="header__link title">УСЛУГИ</a>
+        <a href="#contacts" class="header__link title">КОНТАКТЫ</a>
+      </nav>
       <section class="hero">
         <h1 class="hero__title">
           Современные и стильные интерьеры для комфортной жизни
         </h1>
         <div class="hero__description">
           <p class="hero__text">
-            Мы — команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов
+            Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов
           </p>
         </div>
       </section>
   
-      <section class="about">
-        <h2 class="about__title">О НАС</h2>
+      <section id="about" class="about">
+        <h2 class="about__title title">О НАС</h2>
         <p class="about__text">
-          Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
+        Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
         </p>
         <a href="#" class="about__link">Посмотреть услуги</a>
       </section>
   
-      <section class="projects">
-        <h2 class="projects__title">ПРОЕКТЫ</h2>
+      <section id="projects" class="projects">
+        <h2 class="projects__title title">ПРОЕКТЫ</h2>
         <ul class="projects__list">
           <li class="projects__item">
-            <img src="resources/jk-pravobereznij.png" alt="Картинка ЖК Правобережный" class="projects__image" />
+            <img 
+              src="resources/jk-pravobereznij.png"
+              alt="Картинка ЖК Правобережный" 
+              class="projects__image"
+            />
             <p class="projects__name">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
             <a href="#" class="projects__link">Подробнее →</a>
           </li>
           <li class="projects__item">
-            <img src="resources/jk-norverzchskij.png" alt="Картинка ЖК Норвежский" class="projects__image" />
+            <img 
+              src="resources/jk-norverzchskij.png" 
+              alt="Картинка ЖК Норвежский" 
+              class="projects__image" 
+            />
             <p class="projects__name">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
             <a href="#" class="projects__link">Подробнее →</a>
           </li>
           <li class="projects__item">
-            <img src="resources/jk-sosnovskij.png" alt="Картинка ЖК Сосновский" class="projects__image" />
+            <img 
+              src="resources/jk-sosnovskij.png" 
+              alt="Картинка ЖК Сосновский" 
+              class="projects__image" 
+            />
             <p class="projects__name">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
             <a href="#" class="projects__link">Подробнее →</a>
           </li>
         </ul>
         <button class="projects__button">Смотреть все проекты</button>
       </section>
-      <section class="services">
-        <h2 class="services__title">УСЛУГИ</h2>
+      <section id="services" class="services">
+        <h2 class="services__title title">УСЛУГИ</h2>
         <ul class="services__list">
           <li class="services__item">
-            <img src="resources/planning-solution.png" alt="Картинка планировочное решение" class="services__image" />
+            <img 
+              src="resources/planning-solution.png" 
+              alt="Картинка планировочное решение" 
+              class="services__image" 
+            />
             <h3 class="services__name">Планировочное решение — от 2500₽/м²</h3>
           </li>
           <li class="services__item">
-            <img src="resources/design-project.png" alt="Картинка дизайн-проект" class="services__image" />
+            <img 
+              src="resources/design-project.png" 
+              alt="Картинка дизайн-проект" 
+              class="services__image" 
+            />
             <h3 class="services__name">Дизайн-проект — от 3000₽/м²</h3>
           </li>
           <li class="services__item">
-            <img src="resources/authors-supervision.png" alt="Картинка авторский надзор" class="services__image" />
+            <img 
+              src="resources/authors-supervision.png" 
+              alt="Картинка авторский надзор" 
+              class="services__image" 
+            />
             <h3 class="services__name">Авторский надзор — от 30 000₽ в месяц</h3>
           </li>
           <li class="services__item">
-            <img src="resources/equipment.png" alt="Картинка комплектация" class="services__image" />
+            <img 
+              src="resources/equipment.png" 
+              alt="Картинка комплектация" 
+              class="services__image" 
+            />
             <h3 class="services__name">Комплектация — 5% от стоимости спецификации</h3>
           </li>
         </ul>
       </section>
-    </div>
+
+      <section class="apartment">
+        <h3 class="apartment__title">
+          Проект двухкомнатной квартиры в ЖК Лесной Пейзаж
+        </h3>
+      </section>
+
+      <section id="contacts" class="contacts">
+        <h2 class="contacts__title title">КОНТАКТЫ</h2>
+        <p class="contacts__tel">
+          <a href="tel:+79358954535">+7 935&nbsp;&nbsp;895-45-35</a>
+        </p>
+        <p class="contacts__mail">
+          <a href="mailto:hello@mail.com">hello@mail.com</a>
+        </p>
+      </section>
+      
+      <footer class="footer">
+        <nav class="footer__nav">
+          <h2 class="footer__link title">О НАС</h2>
+          <h2 class="footer__link title">ПРОЕКТЫ</h2>
+          <h2 class="footer__link title">УСЛУГИ</h2>
+          <h2 class="footer__link title">КОНТАКТЫ</h2>
+        </nav>
+        <p class="footer_studio-metrica">
+          студия дизайна интерьера Метрика — 2023
+        </p>
+      </footer>
+    </div>  
   </body>
-  
 </html>
