--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
       
       <footer class="footer">
         <nav class="footer__nav">
-          <h2 class="footer__link title">О НАС</h2>
-          <h2 class="footer__link title">ПРОЕКТЫ</h2>
-          <h2 class="footer__link title">УСЛУГИ</h2>
-          <h2 class="footer__link title">КОНТАКТЫ</h2>
+          <a href="#about" class="footer__link title">О НАС</ф>
+          <a href="#projects" class="footer__link title">ПРОЕКТЫ</a>
+          <a href="#services" class="footer__link title">УСЛУГИ</a>
+          <a href="#contacts" class="footer__link title">КОНТАКТЫ</a>
         </nav>
         <p class="footer_studio-metrica">
           студия дизайна интерьера Метрика — 2023
